Compilar todos los estilos con SASS
- Aplico el archivo CSS generado y todos los estilos se aplican correctamente.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,2 +1,2 @@
 // Importa todo el CSS de Bootstrap
-@import "bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
